# 3DGS-Snapdragon

./: .gitignore  README.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: poses_bounds.npy
app/src/main/cpp/: 3dgs.cpp  3dgs.h  CMakeLists.txt  GSScene.cpp  GSScene.h  GUIManager.cpp  GUIManager.h  Renderer.cpp  Renderer.h  base_utils.cpp  base_utils.h  main.cpp
app/src/main/cpp/cmake/: compile_embedfile.sh  embedfile.c
app/src/main/cpp/shaders/: CMakeLists.txt  prefix_sum.comp  preprocess.comp  preprocess_sort.comp  render.comp  tile_boundary.comp
app/src/main/cpp/shaders/sort/: hist.comp  sort.comp
app/src/main/cpp/vulkan/: Buffer.cpp  Buffer.h  ImguiManager.cpp  QueryManager.cpp  Swapchain.cpp  VMA.cpp  VulkanContext.cpp
app/src/main/cpp/vulkan/windowing/: AndroidWindow.cpp  AndroidWindow.h  GLFWWindow.cpp
app/src/main/java/com/android/hellovk/: VulkanActivity.kt
